WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36967
Synchronous rendering when setting form control values slows down JavaScript
https://bugs.webkit.org/show_bug.cgi?id=36967
Summary
Synchronous rendering when setting form control values slows down JavaScript
Geoffrey Garen
Reported
2010-04-01 09:53:33 PDT
Synchronous rendering when setting form control values slows down JavaScript
Attachments
patch
(4.05 KB, patch)
2010-04-01 10:26 PDT
,
Geoffrey Garen
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2010-04-01 10:26:33 PDT
Created
attachment 52309
[details]
patch
Geoffrey Garen
Comment 2
2010-04-01 13:11:30 PDT
Committed revision 56933.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug